--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   
   <!-- Favicon and App Icons -->
   <link rel="icon" type="image/svg+xml" href="/research-icon.svg">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/svg+xml" href="/research-icon.svg" sizes="any">
+  <link rel="apple-touch-icon" href="/research-icon.svg">
+  <link rel="shortcut icon" href="/research-icon.svg" type="image/svg+xml">
   <link rel="manifest" href="/manifest.json">
   
   <!-- Web App Manifest -->
