--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   <meta name="apple-mobile-web-app-title" content="I+D Canarias">
   <meta name="msapplication-TileColor" content="#006480">
   <meta name="msapplication-tap-highlight" content="no">
+  <meta name="msapplication-TileImage" content="/pwa-icon-192.svg">
+  <meta name="application-name" content="Observatorio I+D Canarias">
   
   <!-- Performance and Security -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,8 +45,10 @@
   
   <!-- Favicon and App Icons -->
   <link rel="icon" type="image/svg+xml" href="/research-icon.svg">
-  <link rel="icon" type="image/svg+xml" href="/research-icon.svg" sizes="any">
-  <link rel="apple-touch-icon" href="/research-icon.svg">
+  <link rel="icon" type="image/svg+xml" href="/research-icon.svg" sizes="32x32">
+  <link rel="icon" type="image/svg+xml" href="/pwa-icon-192.svg" sizes="192x192">
+  <link rel="apple-touch-icon" href="/pwa-icon-192.svg" sizes="192x192">
+  <link rel="apple-touch-icon" href="/pwa-icon-512.svg" sizes="512x512">
   <link rel="shortcut icon" href="/research-icon.svg" type="image/svg+xml">
   <link rel="manifest" href="/manifest.json">
   
